--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -4,11 +4,13 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 15em 100px;
+        padding-bottom: 0;
     }
     
     header section{
         display: flex;
         flex-direction: row;
+        justify-content: center;
     }
 
     /*Top half*/
@@ -32,6 +34,7 @@
 
     nav{
         margin-left: 0px;
+        margin-right: 0;
     }
 
     nav ul#navigation{
@@ -50,7 +53,7 @@
         margin-left: 0.5em;
         margin-right: 0.5em;
         padding: 15px;
-        font-size: 40px;
+        font-size: 35px;
         border: 0;
         text-align: center;
     }
@@ -103,9 +106,11 @@
 
     /*Main code for Home*/
     .home{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin: 1.5em;
+        margin-right: 1.7em;
     }
 
     .home div{
@@ -136,15 +141,17 @@
     #news{
         grid-column: 2/4;
         grid-row: 3/4;
-        padding-right: 0.5vw;
+        padding-right: 1.3vw;
     }
 
     #hero{
         grid-column: 2/4;
         grid-row: 1/3;
         padding: 0;
-        padding-right: 0.5vw;
+        padding-right: 0.8vw;
         padding-bottom: 1em;
+        padding-top: 5px;
+        padding-left: 0.5vw;
         margin: 0;
         margin: 15px;
     }
@@ -154,9 +161,9 @@
         grid-row: 1/4; 
         display: grid;
         margin: 0;
-        margin: 25px;
+        margin-left: 1em;
         padding: 0;
-        padding-top: 15px;
+        padding-top: 45px;
         align-content: center;
         align-items: center;
     }
@@ -165,9 +172,7 @@
         width: 225px;
         height: 225px;
         margin: 0;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
+        margin: 2em auto 5em auto;
     }
 
     #spotlight3{
