--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,7 +1,8 @@
-@media screen and (min-width: 600px){
+@media screen and (min-width: 730px){
     header{
         display: flex;
         flex-direction: column;
+        padding-bottom: 1em;
     }
 
     /*Top half*/
@@ -43,7 +44,8 @@
     .home{
         display: grid;
         grid-template-columns: 1fr 15em;
-        grid-template-rows: 45em repeat(4, 350px);
+        grid-template-rows: 45em repeat(4, 25em);
+        margin: 2em;
     }
     
     
@@ -71,8 +73,8 @@
         #weather{
             grid-column: 2/3;
             grid-row: 5/6;
-            padding-bottom: 14em;
-            margin-bottom: 6em;
+            padding-bottom: 13em;
+            margin-bottom: 1em;
         }
         
         #join{
